Fix compilation with Java 11